menu added, labels updated and iframe ppt added

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,7 +4,7 @@
 
 <div class="container vh-100">
   
-  Hello Cyber Vatam
+  வணக்கம்...!!! சைபர் வட்டம் தளத்திற்கு உங்களை வரவேற்கிறோம்...!!!
 
     
 
