--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,7 +6,15 @@
   
   வணக்கம்...!!! சைபர் வட்டம் தளத்திற்கு உங்களை வரவேற்கிறோம்...!!!
 
-    
+  தகவல் தொழில்நுட்பத்தை அவரவர் தாய் மொழியில் பயில்வதற்கு தேவையான தரவுகளை உருவாக்குவதே இந்த தளத்தின் நோக்கம். 
+  
+  தற்போது, ஆங்கிலம் மற்றும் தமிழில் தரவுகள் கிடைக்கின்றன. மற்ற மொழிகளிலும், இதனை கிடைக்கச் செய்வதில் மிகுந்த ஆர்வமாக உள்ளோம். 
+  
+  நீங்கள், இதனை உங்கள் மொழியில் கிடைக்க உதவலாம்.
+
+  இந்த தளத்தில் உள்ள அனைத்து படைப்புகளும், படைப்பாக்கப் பொதுமங்கள்-பெயர் குறிப்பிடுதல்-வர்த்தக நோக்கமற்ற-அதே மாதிரி பகிர்தல் (CC-BY-NC-SA 4.0) உரிமத்தின் கீழ் வழங்கப்படுகிறது. இந்த உரிமம்பற்றி மேலும் தெரிந்துகொள்ள, கீழ்காணும் வளங்காட்டியை சொடுக்கவும்.
+
+  https://creativecommons.org/licenses/by-nc-sa/4.0/  
 
   </div>
 
